cloudformation/infra-stack.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: POC — EC2 + k3s (lightweight Kubernetes)

Parameters:
  ProjectName:
    Type: String
    Default: my-djanjo-app

  InstanceType:
    Type: String
    Default: t3.medium

  ImageId:
    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
    Default: /aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2

  KeyName:
    Type: String
    Description: Your AWS Academy Key Pair name 

Resources:

  EC2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow SSH, HTTP and k3s
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 8000
          ToPort: 8000
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 6443
          ToPort: 6443
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 30000
          ToPort: 32767
          CidrIp: 0.0.0.0/0

  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: !Ref InstanceType
      ImageId: !Ref ImageId
      KeyName: !Ref KeyName
      SecurityGroups:
        - !Ref EC2SecurityGroup
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-k3s-server"
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash

          # Skip yum update — too slow and causes timeout
          # Install k3s directly
          curl -sfL https://get.k3s.io | INSTALL_K3S_SKIP_SELINUX_RPM=true sh -

          # Wait for k3s service to start
          systemctl enable k3s
          systemctl start k3s

          # Wait until node is Ready
          timeout 120 bash -c 'until kubectl get nodes 2>/dev/null | grep -q Ready; do sleep 5; done'

          # Make kubeconfig accessible
          chmod 644 /etc/rancher/k3s/k3s.yaml
          cp /etc/rancher/k3s/k3s.yaml /home/ec2-user/k3s.yaml
          chown ec2-user:ec2-user /home/ec2-user/k3s.yaml

          echo "k3s setup complete" > /tmp/k3s-ready

# ── Elastic IP — fixed public IP ──────────────────────────
  ElasticIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      InstanceId: !Ref EC2Instance
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-eip"

Outputs:
  InstancePublicIP:
    Value: !Ref ElasticIP          # ← use EIP instead of EC2 dynamic IP
    Description: Fixed public IP of the k3s server
    Export:
      Name: K3sPublicIP

  InstanceId:
    Value: !Ref EC2Instance
    Description: EC2 Instance ID
    Export:
      Name: K3sInstanceId
